444修改文件名，跑通两个方法

--- a/part2_rank_chrize.ipynb
+++ b/part2_rank_chrize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "7d516f68",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "52bca4b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ===================== 统一文件命名常量区 =====================\n",
+    "# 输入：已清洗的基础数据集文件名（可在此统一修改）\n",
+    "INPUT_CLEANED_DATA = '1_cleaned_data.csv'\n",
+    "# 输出：排名法机制建模数据集保存文件名（可在此统一修改）\n",
+    "OUTPUT_RANK_MODELING_DATA = '2_RANK_modeling_data.csv'\n",
+    "# =============================================================="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e9c4ec7",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +48,7 @@
    ],
    "source": [
     "# 重新加载清洗后的数据集\n",
-    "df = pd.read_csv('cleaned_dwts_data_fixed.csv')\n",
+    "df = pd.read_csv(INPUT_CLEANED_DATA)\n",
     "\n",
     "# 根据题目文档重新理解节目机制\n",
     "print(\"=== 节目机制关键信息 ===\")\n",
@@ -51,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9e9c4ec7",
+   "execution_count": 8,
+   "id": "20e64825",
    "metadata": {},
    "outputs": [
     {
@@ -123,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "20e64825",
+   "execution_count": 9,
+   "id": "209bfa5e",
    "metadata": {},
    "outputs": [
     {
@@ -197,8 +212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "209bfa5e",
+   "execution_count": 10,
+   "id": "90dda2cb",
    "metadata": {},
    "outputs": [
     {
@@ -262,8 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "90dda2cb",
+   "execution_count": 11,
+   "id": "63cc870e",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +296,7 @@
       "- 总周次: 87\n",
       "- 包含平局的周次: 72\n",
       "\n",
-      "修正后的数据集已保存为: rank_based_modeling_data_corrected.csv\n"
+      "修正后的数据集已保存为: 2_RANK_modeling_data.csv\n"
      ]
     }
    ],
@@ -334,14 +349,22 @@
     "    print(f\"- 包含平局的周次: {modeling_dataset[modeling_dataset['has_tie']].groupby(['season', 'week']).ngroups}\")\n",
     "    \n",
     "    # 保存修正后的数据集\n",
-    "    modeling_dataset.to_csv('rank_based_modeling_data_corrected.csv', index=False)\n",
-    "    print(\"\\n修正后的数据集已保存为: rank_based_modeling_data_corrected.csv\")"
+    "    modeling_dataset.to_csv(OUTPUT_RANK_MODELING_DATA, index=False)\n",
+    "    print(f\"\\n修正后的数据集已保存为: {OUTPUT_RANK_MODELING_DATA}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63cc870e",
+   "id": "8e5cb671",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "751471fd",
    "metadata": {},
    "outputs": [],
    "source": []
