666准备写论文；

--- a/part1_wash.ipynb
+++ b/part1_wash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b750e231",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "a2768a4b",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "94b7f23c",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,56 @@
      "text": [
       "步骤1：加载数据...\n",
       "原始数据形状: (421, 53)\n",
+      "      celebrity_name     ballroom_partner celebrity_industry  \\\n",
+      "0      John O'Hurley  Charlotte Jorgensen      Actor/Actress   \n",
+      "1       Kelly Monaco            Alec Mazo      Actor/Actress   \n",
+      "2  Evander Holyfield      Edyta Sliwinska            Athlete   \n",
+      "3      Rachel Hunter     Jonathan Roberts              Model   \n",
+      "4      Joey McIntyre      Ashly DelGrosso      Singer/Rapper   \n",
+      "\n",
+      "  celebrity_homestate celebrity_homecountry/region  \\\n",
+      "0               Maine                United States   \n",
+      "1        Pennsylvania                United States   \n",
+      "2             Alabama                United States   \n",
+      "3                 NaN                  New Zealand   \n",
+      "4       Massachusetts                United States   \n",
+      "\n",
+      "   celebrity_age_during_season  season            results  placement  \\\n",
+      "0                           50       1          2nd Place          2   \n",
+      "1                           29       1          1st Place          1   \n",
+      "2                           42       1  Eliminated Week 3          5   \n",
+      "3                           35       1  Eliminated Week 4          4   \n",
+      "4                           32       1          3rd Place          3   \n",
+      "\n",
+      "   week1_judge1_score  ...  week9_judge3_score  week9_judge4_score  \\\n",
+      "0                 7.0  ...                 NaN                 NaN   \n",
+      "1                 5.0  ...                 NaN                 NaN   \n",
+      "2                 5.0  ...                 NaN                 NaN   \n",
+      "3                 7.0  ...                 NaN                 NaN   \n",
+      "4                 7.0  ...                 NaN                 NaN   \n",
+      "\n",
+      "   week10_judge1_score  week10_judge2_score  week10_judge3_score  \\\n",
+      "0                  NaN                  NaN                  NaN   \n",
+      "1                  NaN                  NaN                  NaN   \n",
+      "2                  NaN                  NaN                  NaN   \n",
+      "3                  NaN                  NaN                  NaN   \n",
+      "4                  NaN                  NaN                  NaN   \n",
+      "\n",
+      "   week10_judge4_score  week11_judge1_score  week11_judge2_score  \\\n",
+      "0                  NaN                  NaN                  NaN   \n",
+      "1                  NaN                  NaN                  NaN   \n",
+      "2                  NaN                  NaN                  NaN   \n",
+      "3                  NaN                  NaN                  NaN   \n",
+      "4                  NaN                  NaN                  NaN   \n",
+      "\n",
+      "   week11_judge3_score  week11_judge4_score  \n",
+      "0                  NaN                  NaN  \n",
+      "1                  NaN                  NaN  \n",
+      "2                  NaN                  NaN  \n",
+      "3                  NaN                  NaN  \n",
+      "4                  NaN                  NaN  \n",
+      "\n",
+      "[5 rows x 53 columns]\n",
       "\n",
       "==================================================\n",
       "\n"
@@ -70,12 +120,13 @@
     "        exit()\n",
     "\n",
     "print(f\"原始数据形状: {df.shape}\")\n",
+    "print(df.head())\n",
     "print(\"\\n\" + \"=\"*50 + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "4440018f",
    "metadata": {},
    "outputs": [
@@ -112,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "aca51d03",
    "metadata": {},
    "outputs": [
@@ -151,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "512e1883",
    "metadata": {},
    "outputs": [
@@ -170,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\harry_pv15g7u\\AppData\\Local\\Temp\\ipykernel_16868\\1685931183.py:23: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\harry_pv15g7u\\AppData\\Local\\Temp\\ipykernel_47928\\1685931183.py:23: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  df_long = df_long.groupby(['celebrity_name', 'season']).apply(mark_elimination).reset_index(drop=True)\n"
      ]
     }
@@ -206,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "94d1bd12",
    "metadata": {},
    "outputs": [
@@ -263,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "12955010",
    "metadata": {},
    "outputs": [
@@ -319,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "28eb3c3c",
    "metadata": {},
    "outputs": [
