--- a/part2_percent_chrize.ipynb
+++ b/part2_percent_chrize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "745aa498",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "432f6f88",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "cf50c0ac",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "cbb5aea7",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "d051aa17",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "5f893267",
    "metadata": {},
    "outputs": [
@@ -231,6 +231,15 @@
     "# 创建稳健的建模数据集\n",
     "def create_robust_modeling_dataset(data):\n",
     "    \"\"\"创建稳健的百分比机制建模数据集\"\"\"\n",
+    "    \n",
+    "    data = data.copy()\n",
+    "    data = data.sort_values(['celebrity_name', 'season', 'week'])\n",
+    "    \n",
+    "    # 标记每位选手的最后一周（用于识别淘汰周）\n",
+    "    data['next_week'] = data.groupby(['celebrity_name', 'season'])['week'].shift(-1)\n",
+    "    data['eliminated_this_week'] = data['next_week'].isna()\n",
+    "    if 'placement' in data.columns:\n",
+    "        data.loc[data['placement'] == 1, 'eliminated_this_week'] = False\n",
     "    \n",
     "    # 确保有百分比数据\n",
     "    valid_data = data[data['weekly_score_percentage'].notna() & (data['weekly_score_percentage'] > 0)].copy()\n",
@@ -275,6 +284,9 @@
     "    print(f\"\\n数据质量分布:\")\n",
     "    print(quality_df['quality'].value_counts())\n",
     "    \n",
+    "    # 保存前移除辅助列\n",
+    "    valid_data = valid_data.drop(columns=['next_week'])\n",
+    "    \n",
     "    return valid_data\n",
     "\n",
     "# 创建数据集\n",
@@ -283,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "76984930",
    "metadata": {},
    "outputs": [
@@ -293,7 +305,7 @@
      "text": [
       "\n",
       "=== 最终建模数据集 ===\n",
-      "数据形状: (1997, 13)\n",
+      "数据形状: (1997, 14)\n",
       "季节数量: 25\n",
       "选手数量: 295\n",
       "包含的赛季: [np.int64(3), np.int64(4), np.int64(5), np.int64(6), np.int64(7), np.int64(8), np.int64(9), np.int64(10), np.int64(11), np.int64(12), np.int64(13), np.int64(14), np.int64(15), np.int64(16), np.int64(17), np.int64(18), np.int64(19), np.int64(20), np.int64(21), np.int64(22), np.int64(23), np.int64(24), np.int64(25), np.int64(26), np.int64(27)]\n",
@@ -312,17 +324,17 @@
       "22       6   1.0   Adam Carolla                 6.172840              7.0   \n",
       "23       6   2.0   Adam Carolla                 7.392996              6.0   \n",
       "\n",
-      "    was_eliminated  \n",
-      "11           False  \n",
-      "12           False  \n",
-      "13           False  \n",
-      "14           False  \n",
-      "15           False  \n",
-      "16           False  \n",
-      "17           False  \n",
-      "18           False  \n",
-      "22           False  \n",
-      "23           False  \n"
+      "    eliminated_this_week  \n",
+      "11                 False  \n",
+      "12                 False  \n",
+      "13                 False  \n",
+      "14                 False  \n",
+      "15                 False  \n",
+      "16                 False  \n",
+      "17                 False  \n",
+      "18                 False  \n",
+      "22                 False  \n",
+      "23                 False  \n"
      ]
     }
    ],
@@ -345,7 +357,7 @@
     "    # 显示样例\n",
     "    print(\"\\n数据样例:\")\n",
     "    sample_cols = ['season', 'week', 'celebrity_name', 'weekly_score_percentage', \n",
-    "                   'percentage_rank', 'was_eliminated']\n",
+    "                   'percentage_rank', 'eliminated_this_week']\n",
     "    print(modeling_data[sample_cols].head(10))\n",
     "else:\n",
     "    print(\"无法创建建模数据集\")"
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "ee08fc8e",
    "metadata": {},
    "outputs": [
@@ -371,15 +383,28 @@
    "source": [
     "# 额外的数据验证\n",
     "def validate_elimination_patterns(data):\n",
-    "    \"\"\"验证淘汰模式是否合理\"\"\"\n",
+    "    \"\"\"验证淘汰模式是否合理（放宽决赛/半决赛多淘汰情况）\"\"\"\n",
     "    \n",
     "    print(\"=== 淘汰模式验证 ===\")\n",
+    "    \n",
+    "    if 'eliminated_this_week' not in data.columns:\n",
+    "        print(\"缺少 eliminated_this_week 列，无法验证淘汰模式\")\n",
+    "        return []\n",
+    "    \n",
+    "    # 计算每季最大周次，用于识别决赛/半决赛周\n",
+    "    season_max_week = data.groupby('season')['week'].max()\n",
     "    \n",
     "    issues = []\n",
     "    \n",
     "    for (season, week), group in data.groupby(['season', 'week']):\n",
-    "        n_eliminated = len(group[group['was_eliminated'] == True])\n",
+    "        n_eliminated = int(group['eliminated_this_week'].sum())\n",
     "        n_total = len(group)\n",
+    "        max_week = season_max_week.loc[season]\n",
+    "        is_final_stage = week >= (max_week - 1)  # 最后两周\n",
+    "        \n",
+    "        # 决赛/半决赛允许多淘汰；或人数很少时放宽\n",
+    "        if is_final_stage or n_total <= 4:\n",
+    "            continue\n",
     "        \n",
     "        # 检查淘汰比例是否合理（通常每周淘汰1-2人）\n",
     "        if n_eliminated > n_total * 0.5:  # 如果淘汰超过50%\n",
